--- a/formulario.html
+++ b/formulario.html
@@ -10,11 +10,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Formulario de Contacto</title>
 </head>
-<header>
-        <img src="images/PuntoVet.png">
-</header>
 <body class="bodyform">
         <div class="container bg-light">
+                <img src="images/PuntoVet.png" alt="logo" class="hero-image">
             <fieldset class="form-group" border=10>
                 <h2 class="h2form"> Formulario de Contacto</h2>
         <form action="imprimir.php" method="post">
