Fixed logo in login and form, added contact button in faq

--- a/formulario.html
+++ b/formulario.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bodyform">
         <div class="container bg-light">
-                <img src="images/PuntoVet.png" alt="logo" class="hero-image">
+                <img src="images/Muestra.logo-puntoVet-original.jpg" alt="logo" class="hero-image">
             <fieldset class="form-group" border=10>
                 <h2 class="h2form"> Formulario de Contacto</h2>
         <form action="imprimir.php" method="post">
