--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 </head>
 <body class="container-fluid">
     <logo class="row mx-auto d-flex">
-        <img src="images/logo.jpg" alt="logo" class="mx-auto logo">
+        <img src="images/Muestra.logo-puntoVet-original.jpg" alt="logo" class="mx-auto logo">
     </logo>
     <username class="  row  mx-auto ">
         <p      class="col-xs-4 col-sm-4 col-md-12 col-lg-12 text-center mx-auto userypass">Username</p>
