--- a/faq.html
+++ b/faq.html
@@ -13,6 +13,7 @@
 </head>
 <body class="container-fluid">
     <img src="images/Muestra.logo-puntoVet-original.jpg" alt="logo" class="hero-image">
+    <h2>Preguntas Frecuentes</h2>
 
     <button class="accordion">Como reservo un turno para bañar a mi perro?</button>
     <div class="panel">
@@ -54,5 +55,7 @@
     <div class="panel">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab necessitatibus tempora, nobis, iure illum quia dignissimos, eveniet accusantium repellat est molestiae consequatur alias maxime inventore cum nesciunt ullam minima expedita.</p>
     </div>
+    <h3>No encontraste la respuesta que necesitabas? Ponte en contacto con nosotros!</h3>
+    <button type="button" class="btn btn-primary">Contacto</button>
 </body>
 </html>
