--- a/formulario.html
+++ b/formulario.html
@@ -12,31 +12,31 @@
 </head>
 <body class="bodyform">
         <div class="container bg-light">
-                <img src="images/PuntoVet.png" alt="logo" class="hero-image">
+                <img src="images/Muestra.logo-puntoVet-original.jpg" alt="logo" class="hero-image">
             <fieldset class="form-group" border=10>
                 <h2 class="h2form"> Formulario de Contacto</h2>
         <form action="imprimir.php" method="post">
                 <div class="form-row">
                     <div class="col">
-                        <label for="nombre">Nombre:</label>
+                        <label for="nombre">Nombre :</label>
                         <input type="text" name="nombre">
                     </div>
                 </div>
                 <div class="form-row">
                         <div class="col">
-                        <label for="apellido">Apellido:</label>
+                        <label for="apellido">Apellido :</label>
                         <input type="text" name="nombre">
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
-                    <label for="telefono">Tel de Contacto:</label>
+                    <label for="telefono">Telefono:</label>
                     <input type="text" placeholder="011-XXXX-XXXX"name="email">
                     </div>
                 </div>
                  <div class="form-row">
                     <div class="form-group col-md-6">
-                    <label for="telefono2">Tel Celular:</label>
+                    <label for="telefono2">Celular      :</label>
                     <input type="text" placeholder="15-XXXX-XXXX"name="email">
                     </div>
                 </div>
