--- a/faq.html
+++ b/faq.html
@@ -9,10 +9,18 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/bootstrap.css">
 
-    <title>Document</title>
+    <title>Preguntas Frecuentes</title>
 </head>
 <body class="container-fluid">
     <img src="images/Muestra.logo-puntoVet-original.jpg" alt="logo" class="hero-image">
+    <nav id="nav">
+            <ul class="navbar navbar-btn text-center">
+                <li> <a href="index.html">Inicio</a></li>
+                <li> <a href="login.html">Ingreso</a></li>
+                <li> <a href="formulario.html">Registrate</a></li>
+                <li> <a href="faq.html">Preguntas Frecuentes</a></li>
+            </ul>
+        </nav>
     <h2>Preguntas Frecuentes</h2>
 
     <button class="accordion">Como reservo un turno para bañar a mi perro?</button>
